syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;passage";

package passage;

message Passage {
  int64 formID = 1;
  int64 userID = 2;
  repeated PassageAnswer answers = 3;
}

message PassageAnswer {
  int64 id = 1;
  int64 questionID = 2;
  string text = 3;
}

message Nothing {
  bool dummy = 1;
}

// grpc-сервис прохождения опроса
service FormPassage {
    rpc Pass (Passage) returns (Nothing) {}
}
